# lokalize

./: .craft.ini  .flatpak-manifest.json  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  DESIGN  Mainpage.dox  Messages.sh  PACKAGING  README.md  TODO  lokalize.appdata.xml  org.kde.lokalize.appdata.xml  snapcraft.yaml
appiumtests/: CMakeLists.txt  Instructions.md  file_open.py  plurals_mismatch_double.py  project_close.py  run_all.py  simple_open.py  test.po  test_support.py  workflowtest.py
icons/: CMakeLists.txt  hisc-action-approved.svgz  hisc-app-lokalize.svgz  sc-actions-approved.svgz
icons/global/: CMakeLists.txt  hisc-app-lokalize.svgz  sc-apps-lokalize.svgz
icons/osx/: Info.plist  Lokalize.icns  LokalizePo.icns  LokalizePot.icns  LokalizeXliff.icns
icons/sr/: CMakeLists.txt  sc-actions-approved.svgz
icons/sr@ijekavian/: CMakeLists.txt
icons/sr@ijekavianlatin/: CMakeLists.txt  sc-actions-approved.svgz
icons/sr@latin/: CMakeLists.txt
scripts/: CMakeLists.txt  find-gui-text.sh  msgfmt.py  msgfmt.rc  msgmerge.py  new-project-wizard.py  new-project-wizard.rc  newprojectwizard.py  newprojectwizard.rc  newprojectwizard_win.py  newprojectwizard_win.rc  widget-text-capture.py  widget-text-capture.rc  widget-text-capture.ui  xliff2odf-standalone.py  xliff2odf.py  xliff2odf.rc  xliffmerge.py
src/: CMakeLists.txt  Messages.sh  actionproxy.cpp  actionproxy.h  alttransview.cpp  alttransview.h  binunitsview.cpp  binunitsview.h  completionstorage.cpp  completionstorage.h  editortab.cpp  editortab.h  editortab_findreplace.cpp  editorui.rc  editorview.cpp  editorview.h  find-gui-text.sh  findExtension.ui  kaider.cpp  kaider.desktop  kaider.h  kaider.kcfg  kaider_findextension.ui  kaider_findreplace.cpp  kaider_mergemode.cpp  kaider_prefs.cpp  kaiderui.rc  kaiderview.cpp  kaiderview.h  klanguagebutton.h  krossview.cpp  krossview.h  lokalize.categories  lokalize.desktop  lokalize.notifyrc  lokalize.pro  lokalize.qrc  lokalizemainwindow.cpp  lokalizemainwindow.h  lokalizemainwindowui.rc  (+38 more)
src/catalog/: alttrans.h  catalog.cpp  catalog.h  catalog_private.h  catalogcapabilities.h  catalogfileplugin.h  catalogitem.cpp  catalogitem.h  catalogitem_private.h  catalogsettings.cpp  catalogsettings.h  catalogstorage.h  catalogstring.cpp  catalogstring.h  cmd.cpp  cmd.h  exportplugin.cpp  gettextexport.cpp  gettextexport.h  gettextheader.cpp  gettextheader.h  gettextheaderparser.cpp  gettextheaderparser.h  gettextimport.cpp  gettextimport.h  gettextstorage.cpp  gettextstorage.h  importplugin.cpp  importplugin_private.h  note.h  phase.cpp  phase.h  pluralformtypes_enum.h  pos.cpp  pos.h  state.h  tagrange.h
src/cataloglistview/: cataloglistview.cpp  cataloglistview.h  catalogmodel.cpp  catalogmodel.h
src/common/: diff.cpp  diff.h  domroutines.cpp  domroutines.h  fastsizehintitemdelegate.cpp  fastsizehintitemdelegate.h  flowlayout.cpp  flowlayout.h  headerviewmenu.cpp  headerviewmenu.h  htmlhelpers.cpp  kdemacros.h  languagelistmodel.cpp  languagelistmodel.h  machelpers.mm  stemming.cpp  stemming.h  termlabel.cpp  termlabel.h  unixhelpers.cpp  winhelpers.cpp
src/filesearch/: filesearchoptions.ui  filesearchtab.cpp  filesearchtab.h  filesearchtabui.rc  massreplaceoptions.ui  org.kde.lokalize.FileSearch.xml
src/glossary/: glossary.cpp  glossary.h  glossarytab.cpp  glossarytab.h  glossaryview.cpp  glossaryview.h  glossarywindow.cpp  glossarywindow.h  tbxparser.cpp  tbxparser.h  tbxparser_obsolete.cpp  tbxparser_obsolete.h  termdialog.ui  termedit.ui  termlabel.cpp  termlabel.h
src/kross/: querycontrol.ui  webquerycontroller.cpp  webquerycontroller.h  webqueryview.h
src/languagetool/: languagetoolgrammarerror.cpp  languagetoolgrammarerror.h  languagetoolmanager.cpp  languagetoolmanager.h  languagetoolparser.cpp  languagetoolparser.h  languagetoolresultjob.cpp  languagetoolresultjob.h
src/mergemode/: mergecatalog.cpp  mergecatalog.h  mergeview.cpp  mergeview.h
src/metadata/: filemetadata.cpp  filemetadata.h  poextractor.cpp  poextractor.h  xliffextractor.cpp  xliffextractor.h
src/nokde-stubs/: kaboutdata.h  kactioncollection.h  kcombobox.h  klocalizedstring.cpp  klocalizedstring.h  kmainwindow.h  kmessagebox.h  kpassivepopup.h  ktextedit.h  lokalizesubwindowbase.cpp  prefs.cpp  prefs.h  prefs_lokalize.h  projectbase.h  projectlocal.h  welcometab.cpp  welcometab.h  welcomewidget.ui
src/prefs/: kaider.kcfg  lokalize.kcfg  prefs.cpp  prefs.h  prefs_appearance.ui  prefs_editor.ui  prefs_font.ui  prefs_general.ui  prefs_identity.ui  prefs_kaider.kcfgc  prefs_languagetool.ui  prefs_lokalize.kcfgc  prefs_misc.ui  prefs_pology.ui  prefs_tm.ui  relpathlistsaver.h  relpathsaver.cpp  relpathsaver.h
src/project/: kde-i18n-lists.h  org.kde.lokalize.Project.xml  org.kde.lokalize.ProjectOverview.xml  poextractor.cpp  poextractor.h  prefs_project_advanced.ui  prefs_project_local.ui  prefs_project_pology.ui  prefs_projectmain.ui  prefs_regexps.ui  prefs_webquery.ui  project.cpp  project.h  projectbase.kcfg  projectbase.kcfgc  projectlocal.kcfg  projectlocal.kcfgc  projectmanagerui.rc  projectmodel.cpp  projectmodel.h  projecttab.cpp  projecttab.h  projectview.cpp  projectview.h  projectwidget.cpp  projectwidget.h  projectwindow.cpp  projectwindow.h  updatestatsjob.cpp  updatestatsjob.h  xliffextractor.cpp  xliffextractor.h
src/scripts/: dummy_script.py  dummy_script.rc  find-gui-text.sh  msgmerge.rc  new-project-wizard.py  new-project-wizard.rc  widget-text-capture.py  widget-text-capture.rc  widget-text-capture.ui  xliff2odf-standalone.py  xliff2odf.py  xliff2odf.rc
src/tests/: CMakeLists.txt  filemetadatatest.cpp  gettextheadertest.cpp  glossarytest.cpp  projectmodeltest.cpp  tmjobstest.cpp
src/tm/: dbfilesmodel.cpp  dbfilesmodel.h  dbparams.ui  jobs.cpp  jobs.h  managedatabases.ui  org.kde.lokalize.TranslationMemory.xml  qamodel.cpp  qamodel.h  qaview.cpp  qaview.h  queryoptions.ui  rule.h  tmentry.h  tmmanager.cpp  tmmanager.h  tmscanapi.cpp  tmscanapi.h  tmtab.cpp  tmtab.h  tmview.cpp  tmview.h  tmwindow.cpp  tmwindow.h  translationmemoryrui.rc
(+174 files in other folders)
